fix(back-top): add default z-index

--- a/packages/varlet-ui/src/back-top/backTop.less
+++ b/packages/varlet-ui/src/back-top/backTop.less
@@ -6,6 +6,7 @@
 
 .var-back-top {
   position: fixed;
+  z-index: 100;
   right: var(--back-top-right);
   bottom: var(--back-top-bottom);
   transform: scale(0);
